force-app/main/default/objects/Flame_Product__c/Flame_Product__c.object-meta.xml
<CustomObject>
    <label>Flame Product</label>
    <nameField>
        <displayFormat>FL-{000000}</displayFormat>
        <label>Flame Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flame Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>