force-app/main/default/objects/Flame_Product__c/fields/Application_Parameters_flag__c.field-meta.xml
<CustomField>
    <fullName>Application_Parameters_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Parameters flag</label>
    <type>Checkbox</type>
</CustomField>