force-app/main/default/objects/Flame_Product__c/fields/Arrester_for_Detonation_or_Deflagration__c.field-meta.xml
<CustomField>
    <fullName>Arrester_for_Detonation_or_Deflagration__c</fullName>
    <label>Detonation or Deflagration?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detonation</fullName>
            </value>
            <value>
                <fullName>Deflagration</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
            <value>
                <fullName>DEF</fullName>
                <isActive>false</isActive>
                <label>DEF</label>
            </value>
            <value>
                <fullName>DET</fullName>
                <isActive>false</isActive>
                <label>DET</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>