force-app/main/default/objects/Flame_Product__c/fields/ASSYPARTEXISTING__c.field-meta.xml
<CustomField>
    <fullName>ASSYPARTEXISTING__c</fullName>
    <label>ASSYPARTEXISTING</label>
    <length>30</length>
    <type>Text</type>
</CustomField>