force-app/main/default/objects/Flame_Product__c/fields/Atex_Certificate_2014_34_EU__c.field-meta.xml
<CustomField>
    <fullName>Atex_Certificate_2014_34_EU__c</fullName>
    <label>Atex Certificate 2014/34/EU</label>
    <length>10</length>
    <type>Text</type>
</CustomField>