force-app/main/default/objects/Flame_Product__c/fields/Body_Material__c.field-meta.xml
<CustomField>
    <fullName>Body_Material__c</fullName>
    <label>Body Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>