force-app/main/default/objects/Flame_Product__c/fields/Brinell_Hardness_Examination__c.field-meta.xml
<CustomField>
    <fullName>Brinell_Hardness_Examination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brinell Hardness Examination</label>
    <type>Checkbox</type>
</CustomField>