force-app/main/default/objects/Flame_Product__c/fields/Brinell_hardness_examination_Backend__c.field-meta.xml
<CustomField>
    <fullName>Brinell_hardness_examination_Backend__c</fullName>
    <formula>IF(Brinell_Hardness_Examination__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brinell hardness examination Backend</label>
    <type>Text</type>
</CustomField>