force-app/main/default/objects/Flame_Product__c/fields/Certfication_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Certfication_Requirement__c</fullName>
    <label>Certfication Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>ATEX</fullName>
                <label>ATEX Certificate 2014/34/EU</label>
            </value>
            <value>
                <fullName>CUTR</fullName>
                <label>CU TR</label>
            </value>
            <value>
                <fullName>USCG</fullName>
                <label>US Coast Guard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>