force-app/main/default/objects/Flame_Product__c/fields/Certificate_and_sourcing_flag__c.field-meta.xml
<CustomField>
    <fullName>Certificate_and_sourcing_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate and sourcing flag</label>
    <type>Checkbox</type>
</CustomField>