force-app/main/default/objects/Flame_Product__c/fields/Certification_Save_Check_Flag__c.field-meta.xml
<CustomField>
    <fullName>Certification_Save_Check_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certification_Save_Check_Flag</label>
    <type>Checkbox</type>
</CustomField>