force-app/main/default/objects/Flame_Product__c/fields/Certifications_flag__c.field-meta.xml
<CustomField>
    <fullName>Certifications_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certifications flag</label>
    <type>Checkbox</type>
</CustomField>