force-app/main/default/objects/Flame_Product__c/fields/Charpy_Impact_Testing_Backend__c.field-meta.xml
<CustomField>
    <fullName>Charpy_Impact_Testing_Backend__c</fullName>
    <formula>IF(Charpy_Impact_Testing__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <label>Charpy Impact Testing Backend</label>
    <type>Text</type>
</CustomField>