force-app/main/default/objects/Flame_Product__c/fields/Connection_Size__c.field-meta.xml
<CustomField>
    <fullName>Connection_Size__c</fullName>
    <label>Connection Size Filter (Optional)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>