force-app/main/default/objects/Flame_Product__c/fields/Constrain_Product_Selection_by_Flow__c.field-meta.xml
<CustomField>
    <fullName>Constrain_Product_Selection_by_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter Product Selection by Flow</label>
    <type>Checkbox</type>
</CustomField>