force-app/main/default/objects/Flame_Product__c/fields/Converted_Max_Allowable_Pressure_Drop__c.field-meta.xml
<CustomField>
    <fullName>Converted_Max_Allowable_Pressure_Drop__c</fullName>
    <label>Converted Max Allowable Pressure Drop</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>