force-app/main/default/objects/Flame_Product__c/fields/Converted_Operational_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Converted_Operational_Pressure__c</fullName>
    <label>Converted Operational Pressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>