force-app/main/default/objects/Flame_Product__c/fields/Converted_Required_Flow_Rate__c.field-meta.xml
<CustomField>
    <fullName>Converted_Required_Flow_Rate__c</fullName>
    <label>Converted Required Flow Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>