force-app/main/default/objects/Flame_Product__c/fields/Converted_Run_up_Length_A__c.field-meta.xml
<CustomField>
    <fullName>Converted_Run_up_Length_A__c</fullName>
    <label>Converted Run up  Length A</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>