force-app/main/default/objects/Flame_Product__c/fields/Converted_Run_up_Length_B__c.field-meta.xml
<CustomField>
    <fullName>Converted_Run_up_Length_B__c</fullName>
    <label>Converted Run up Length B</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>