force-app/main/default/objects/Flame_Product__c/fields/Converted_Temprature_of_flowing_Vapor__c.field-meta.xml
<CustomField>
    <fullName>Converted_Temprature_of_flowing_Vapor__c</fullName>
    <label>Converted Temprature of Flowing Vapor</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>