force-app/main/default/objects/Flame_Product__c/fields/CriticalPresRatio__c.field-meta.xml
<CustomField>
    <fullName>CriticalPresRatio__c</fullName>
    <label>CriticalPresRatio</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>