force-app/main/default/objects/Flame_Product__c/fields/CU_TR__c.field-meta.xml
<CustomField>
    <fullName>CU_TR__c</fullName>
    <label>CU TR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>