force-app/main/default/objects/Flame_Product__c/fields/Discountable_Price__c.field-meta.xml
<CustomField>
    <fullName>Discountable_Price__c</fullName>
    <label>Discountable Price</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Currency</type>
</CustomField>