force-app/main/default/objects/Flame_Product__c/fields/Do_you_have_a_closed_or_open_end_pipe__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_closed_or_open_end_pipe__c</fullName>
    <label>Do you have a closed or open end pipe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Open-Closed</fullName>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>