force-app/main/default/objects/Flame_Product__c/fields/Do_you_need_Offset_Bases__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_Offset_Bases__c</fullName>
    <label>Do you Need Offset Bases</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>