force-app/main/default/objects/Flame_Product__c/fields/Drilling__c.field-meta.xml
<CustomField>
    <fullName>Drilling__c</fullName>
    <label>Drilling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>