force-app/main/default/objects/Flame_Product__c/fields/Element_Material__c.field-meta.xml
<CustomField>
    <fullName>Element_Material__c</fullName>
    <label>Element Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>