force-app/main/default/objects/Flame_Product__c/fields/Element_Size__c.field-meta.xml
<CustomField>
    <fullName>Element_Size__c</fullName>
    <label>Element Size Filter (Optional)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>