force-app/main/default/objects/Flame_Product__c/fields/Examination_Option_flag__c.field-meta.xml
<CustomField>
    <fullName>Examination_Option_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Examination Option flag</label>
    <type>Checkbox</type>
</CustomField>