force-app/main/default/objects/Flame_Product__c/fields/Fillet_Weld_Liquid_Dye_Penetrant__c.field-meta.xml
<CustomField>
    <fullName>Fillet_Weld_Liquid_Dye_Penetrant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fillet Weld Liquid Dye Penetrant</label>
    <type>Checkbox</type>
</CustomField>