force-app/main/default/objects/Flame_Product__c/fields/Final_Assembly_Location_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Final_Assembly_Location_Requirements__c</fullName>
    <label>Final Assembly Location Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <default>true</default>
                <label>No Restrictions</label>
            </value>
            <value>
                <fullName>US</fullName>
                <label>Perform Final Assembly in USA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>