force-app/main/default/objects/Flame_Product__c/fields/Flowing_Media__c.field-meta.xml
<CustomField>
    <fullName>Flowing_Media__c</fullName>
    <label>Flowing Media</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Specified</fullName>
            </value>
            <value>
                <fullName>Acetone</fullName>
            </value>
            <value>
                <fullName>Acetylene</fullName>
            </value>
            <value>
                <fullName>Air</fullName>
            </value>
            <value>
                <fullName>Ammonia</fullName>
            </value>
            <value>
                <fullName>Benzene</fullName>
            </value>
            <value>
                <fullName>Butadiene-1.2</fullName>
            </value>
            <value>
                <fullName>Butadiene-1.3</fullName>
            </value>
            <value>
                <fullName>Butane-n</fullName>
            </value>
            <value>
                <fullName>Butene-1</fullName>
            </value>
            <value>
                <fullName>Carbon Dioxide</fullName>
            </value>
            <value>
                <fullName>Carbon Monoxide</fullName>
            </value>
            <value>
                <fullName>Chlorine</fullName>
            </value>
            <value>
                <fullName>Cis-2-Butene</fullName>
            </value>
            <value>
                <fullName>Cyclohexane</fullName>
            </value>
            <value>
                <fullName>Cyclopentane</fullName>
            </value>
            <value>
                <fullName>Decane-n</fullName>
            </value>
            <value>
                <fullName>Diisobutyl</fullName>
            </value>
            <value>
                <fullName>Dimethylbut-2.3</fullName>
            </value>
            <value>
                <fullName>Dimethyl Ether</fullName>
            </value>
            <value>
                <fullName>Dimethylpen-2.2</fullName>
            </value>
            <value>
                <fullName>Dimethylpen-2.4</fullName>
            </value>
            <value>
                <fullName>Dimethylpen-3.3</fullName>
            </value>
            <value>
                <fullName>Dowtherm A</fullName>
            </value>
            <value>
                <fullName>Dowtherm E</fullName>
            </value>
            <value>
                <fullName>Ethane</fullName>
            </value>
            <value>
                <fullName>Ethyl alcohol</fullName>
            </value>
            <value>
                <fullName>Ethylbenzene</fullName>
            </value>
            <value>
                <fullName>Ethylene</fullName>
            </value>
            <value>
                <fullName>Ethylene Glicol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>