force-app/main/default/objects/Flame_Product__c/fields/Gas_Group__c.field-meta.xml
<CustomField>
    <fullName>Gas_Group__c</fullName>
    <label>Gas Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Methane (MESG ≥ 1.14)</fullName>
            </value>
            <value>
                <fullName>NEC D (MESG &gt; 0.75)</fullName>
            </value>
            <value>
                <fullName>NEC C ( MESG &gt; 0.45 ≤ 0.75)</fullName>
            </value>
            <value>
                <fullName>IEC IIA1 ( MESG ≥ 1.14)</fullName>
            </value>
            <value>
                <fullName>IEC IIA ( MESG &gt; 0.90)</fullName>
            </value>
            <value>
                <fullName>IEC IIB3 ( MESG ≥ 0.65)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>