force-app/main/default/objects/Flame_Product__c/fields/Gas_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Gas_Group_Code__c</fullName>
    <label>Gas Group Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>