force-app/main/default/objects/Flame_Product__c/fields/GasGroupDynamic__c.field-meta.xml
<CustomField>
    <fullName>GasGroupDynamic__c</fullName>
    <label>GasGroupDynamic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>