force-app/main/default/objects/Flame_Product__c/fields/GasGroupLevel_Backend__c.field-meta.xml
<CustomField>
    <fullName>GasGroupLevel_Backend__c</fullName>
    <label>GasGroupLevel_Backend</label>
    <length>10</length>
    <type>Text</type>
</CustomField>