force-app/main/default/objects/Flame_Product__c/fields/Housing_Material__c.field-meta.xml
<CustomField>
    <fullName>Housing_Material__c</fullName>
    <label>Housing Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>