force-app/main/default/objects/Flame_Product__c/fields/Inlet_Option_B__c.field-meta.xml
<CustomField>
    <fullName>Inlet_Option_B__c</fullName>
    <label>Inlet Option B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>