force-app/main/default/objects/Flame_Product__c/fields/InletFlowPresPSIA__c.field-meta.xml
<CustomField>
    <fullName>InletFlowPresPSIA__c</fullName>
    <label>InletFlowPresPSIA</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>