force-app/main/default/objects/Flame_Product__c/fields/Intergranular_Corossion_Test_Backend__c.field-meta.xml
<CustomField>
    <fullName>Intergranular_Corossion_Test_Backend__c</fullName>
    <formula>IF(Intergranular_Corossion_Test__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intergranular Corossion Test Backend</label>
    <type>Text</type>
</CustomField>