force-app/main/default/objects/Flame_Product__c/fields/IsConfig__c.field-meta.xml
<CustomField>
    <fullName>IsConfig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsConfig</label>
    <type>Checkbox</type>
</CustomField>