force-app/main/default/objects/Flame_Product__c/fields/LDP_Display_Flag__c.field-meta.xml
<CustomField>
    <fullName>LDP_Display_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LDP Display Flag</label>
    <type>Checkbox</type>
</CustomField>