force-app/main/default/objects/Flame_Product__c/fields/Lead_Time_Site_30__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Site_30__c</fullName>
    <label>Lead Time Site 30</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>