force-app/main/default/objects/Flame_Product__c/fields/Liquid_Dye_Penetrant__c.field-meta.xml
<CustomField>
    <fullName>Liquid_Dye_Penetrant__c</fullName>
    <label>Liquid Dye Penetrant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>