force-app/main/default/objects/Flame_Product__c/fields/List_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Each__c</fullName>
    <label>List Price Each</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>