force-app/main/default/objects/Flame_Product__c/fields/Location_of_Flowing_Pressure_Specificati__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Flowing_Pressure_Specificati__c</fullName>
    <label>Location of Flowing Pressure Specificati</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inlet</fullName>
            </value>
            <value>
                <fullName>Outlet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>