force-app/main/default/objects/Flame_Product__c/fields/Magnetic_Particle_Examination__c.field-meta.xml
<CustomField>
    <fullName>Magnetic_Particle_Examination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Magnetic Particle Examination</label>
    <type>Checkbox</type>
</CustomField>