force-app/main/default/objects/Flame_Product__c/fields/Magnetic_Particle_Examination_Backend__c.field-meta.xml
<CustomField>
    <fullName>Magnetic_Particle_Examination_Backend__c</fullName>
    <formula>IF(Magnetic_Particle_Examination__c,&apos;Y&apos;,&apos;N&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Magnetic Particle Examination Backend</label>
    <type>Text</type>
</CustomField>