force-app/main/default/objects/Flame_Product__c/fields/Media_Name__c.field-meta.xml
<CustomField>
    <fullName>Media_Name__c</fullName>
    <label>Customer Specified Media Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>