force-app/main/default/objects/Flame_Product__c/fields/MinReqdFlowRateSCFH__c.field-meta.xml
<CustomField>
    <fullName>MinReqdFlowRateSCFH__c</fullName>
    <label>MinReqdFlowRateSCFH</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>