force-app/main/default/objects/Flame_Product__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model with Connection and Element Sizes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>